# Galaxy-AR-Monitors

./: .gitignore  .gitmodules  readme.md
packaging/: AppRun  appimagebuild.sh  galaxy.desktop  rawbuild.sh
src/: CMakeLists.txt  main.cpp
src/arenv/: CMakeLists.txt  main.cpp
src/arenv/include/libscreencapture-wayland/: .gitignore  CMakeLists.txt
src/arenv/include/libscreencapture-wayland/PipeWireModule/: PipeWireStream.cpp
src/arenv/include/libscreencapture-wayland/PortalModule/: xdg-desktop-portal.hpp
src/include/libscreencapture-wayland/: common.cpp
src/include/libscreencapture-wayland/PipeWireModule/: PipeWireStream.cpp
src/include/libscreencapture-wayland/PortalModule/sdbus-cpp/: CMakeLists.txt
src/include/xrealAirLinuxDriver/interface_lib/modules/Fusion/Fusion/: FusionOffset.c
src/include/xrealAirLinuxDriver/interface_lib/src/: device3.c  device4.c
src/include/xrealAirLinuxDriver/src/: driver.c
